7 more references to FO transform side channel attacks

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1287,7 +1287,7 @@
 }
 
 
-
+% Added on Feb 5, 2025
 @inproceedings{DBLP:conf/ccs/HermelinkN0S24,
   author       = {Julius Hermelink and
                   Kai{-}Chun Ning and
@@ -1309,6 +1309,141 @@
   doi          = {10.1145/3658644.3690339},
   timestamp    = {Sun, 22 Dec 2024 15:48:19 +0100},
   biburl       = {https://dblp.org/rec/conf/ccs/HermelinkN0S24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/tches/GoyMGL24,
+  author       = {Guillaume Goy and
+                  Julien Maillard and
+                  Philippe Gaborit and
+                  Antoine Loiseau},
+  title        = {Single trace {HQC} shared key recovery with {SASCA}},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2024},
+  number       = {2},
+  pages        = {64--87},
+  year         = {2024},
+  url          = {https://doi.org/10.46586/tches.v2024.i2.64-87},
+  doi          = {10.46586/TCHES.V2024.I2.64-87},
+  timestamp    = {Sat, 08 Jun 2024 13:14:59 +0200},
+  biburl       = {https://dblp.org/rec/journals/tches/GoyMGL24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/iacr/LiCSCGLWW24,
+  author       = {Jinnuo Li and
+                  Chi Cheng and
+                  Muyan Shen and
+                  Peng Chen and
+                  Qian Guo and
+                  Dongsheng Liu and
+                  Liji Wu and
+                  Jian Weng},
+  title        = {Grafted Trees Bear Better Fruit: An Improved Multiple-Valued Plaintext-Checking
+                  Side-Channel Attack against Kyber},
+  journal      = {{IACR} Cryptol. ePrint Arch.},
+  pages        = {1174},
+  year         = {2024},
+  url          = {https://eprint.iacr.org/2024/1174},
+  timestamp    = {Mon, 05 Aug 2024 08:56:05 +0200},
+  biburl       = {https://dblp.org/rec/journals/iacr/LiCSCGLWW24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/tches/KunduCSKMV24,
+  author       = {Suparna Kundu and
+                  Siddhartha Chowdhury and
+                  Sayandeep Saha and
+                  Angshuman Karmakar and
+                  Debdeep Mukhopadhyay and
+                  Ingrid Verbauwhede},
+  title        = {Carry Your Fault: {A} Fault Propagation Attack on Side-Channel Protected
+                  LWE-based {KEM}},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2024},
+  number       = {2},
+  pages        = {844--869},
+  year         = {2024},
+  url          = {https://doi.org/10.46586/tches.v2024.i2.844-869},
+  doi          = {10.46586/TCHES.V2024.I2.844-869},
+  timestamp    = {Sun, 04 Aug 2024 19:51:13 +0200},
+  biburl       = {https://dblp.org/rec/journals/tches/KunduCSKMV24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/acns/MondalKBKV24,
+  author       = {Puja Mondal and
+                  Suparna Kundu and
+                  Sarani Bhattacharya and
+                  Angshuman Karmakar and
+                  Ingrid Verbauwhede},
+  editor       = {Christina P{\"{o}}pper and
+                  Lejla Batina},
+  title        = {A Practical Key-Recovery Attack on LWE-Based Key-Encapsulation Mechanism
+                  Schemes Using Rowhammer},
+  booktitle    = {Applied Cryptography and Network Security - 22nd International Conference,
+                  {ACNS} 2024, Abu Dhabi, United Arab Emirates, March 5-8, 2024, Proceedings,
+                  Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14585},
+  pages        = {271--300},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-54776-8\_11},
+  doi          = {10.1007/978-3-031-54776-8\_11},
+  timestamp    = {Mon, 01 Apr 2024 11:14:20 +0200},
+  biburl       = {https://dblp.org/rec/conf/acns/MondalKBKV24.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@article{DBLP:journals/tches/DongG25,
+  author       = {Haiyue Dong and
+                  Qian Guo},
+  title        = {{OT-PCA:} New Key-Recovery Plaintext-Checking Oracle Based Side-Channel
+                  Attacks on {HQC} with Offline Templates},
+  journal      = {{IACR} Trans. Cryptogr. Hardw. Embed. Syst.},
+  volume       = {2025},
+  number       = {1},
+  pages        = {251--274},
+  year         = {2025},
+  url          = {https://doi.org/10.46586/tches.v2025.i1.251-274},
+  doi          = {10.46586/TCHES.V2025.I1.251-274},
+  timestamp    = {Wed, 22 Jan 2025 15:19:50 +0100},
+  biburl       = {https://dblp.org/rec/journals/tches/DongG25.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+@inproceedings{DBLP:conf/acns/WangBD24,
+  author       = {Ruize Wang and
+                  Martin Brisfors and
+                  Elena Dubrova},
+  editor       = {Christina P{\"{o}}pper and
+                  Lejla Batina},
+  title        = {A Side-Channel Attack on a Higher-Order Masked CRYSTALS-Kyber Implementation},
+  booktitle    = {Applied Cryptography and Network Security - 22nd International Conference,
+                  {ACNS} 2024, Abu Dhabi, United Arab Emirates, March 5-8, 2024, Proceedings,
+                  Part {III}},
+  series       = {Lecture Notes in Computer Science},
+  volume       = {14585},
+  pages        = {301--324},
+  publisher    = {Springer},
+  year         = {2024},
+  url          = {https://doi.org/10.1007/978-3-031-54776-8\_12},
+  doi          = {10.1007/978-3-031-54776-8\_12},
+  timestamp    = {Tue, 05 Mar 2024 11:55:52 +0100},
+  biburl       = {https://dblp.org/rec/conf/acns/WangBD24.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
