--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -175,7 +175,7 @@ Fujisaki and Okamoto proposed to construct CCA secure hybrid PKE by combining a 
 
 Despite its widespread adoption, the Fujisaki-Okamoto transformation has many flaws: \begin{itemize}
     \item \textbf{Computational inefficiency.} In all variants of Fujisaki-Okamoto transformation, decapsulation routine needs to re-encrypt the decryption to ensure ciphertext non-malleability. For input PKE whose encryption routine carries significant computational cost, such as most lattice-based cryptosystems, re-encryption substantially slows down decapsulation.
-    \item \textbf{Side-channel vulnerability.} Re-encryption introduces side channels that can leak information about the decrypted PKE plaintext. As demonstrated in \cite{DBLP:journals/tches/UenoXTITH22,DBLP:journals/tches/TanakaUXITH23,DBLP:conf/acns/Huguenin-Dumittan20,DBLP:conf/ccs/HermelinkN0S24}, these side channels can be converted into efficient key-recovery and/or message-recovery attacks.
+    \item \textbf{Side-channel vulnerability.} Re-encryption introduces side channels that can leak information about the decrypted PKE plaintext. As demonstrated in \cite{DBLP:journals/tches/UenoXTITH22,DBLP:journals/tches/TanakaUXITH23,DBLP:conf/acns/Huguenin-Dumittan20,DBLP:conf/ccs/HermelinkN0S24,DBLP:journals/tches/GoyMGL24,DBLP:journals/iacr/LiCSCGLWW24,DBLP:journals/tches/KunduCSKMV24,DBLP:conf/acns/MondalKBKV24,DBLP:journals/tches/DongG25,DBLP:conf/acns/WangBD24}, these side channels can be converted into efficient key-recovery and/or message-recovery attacks.
     \item \textbf{Security degradation.} \textit{de-randomization} can degrade the security of a randomized PKE. Where the security parameters did not account for this loss, the security of the KEM can fall below the expected level. Consequently, larger parameters are necessary to account for the security loss, which slows down the cryptosystem \cite{cryptoeprint:2021/912,DBLP:journals/iacr/Bernstein21}.
 \end{itemize}
 
