--- a/crypto2025/main.tex
+++ b/crypto2025/main.tex
@@ -72,8 +72,12 @@
     
     We instantiated our proposed KEM transformation using subroutines of Classic McEliece and called it McElieceEtM. We then implemented McElieceEtM with a wide selection of MACs including Poly1305, GMAC, CMAC, and KMAC256. Compared to Classic McEliece, which uses a modified FO transform, McElieceEtM achieves 9-12\% performance improvement in throughput (encapsulation + decapsulation time).
     \keywords{
-    First keyword  \and Second keyword \and Another keyword.
-}
+        key encapsulation mechanism 
+        \and Fujisaki-Okamoto transformation
+        \and message authentication code 
+        \and post-quantum cryptography
+        \and code-based cryptography
+    }
 \end{abstract}
 
 \section{Introduction}\label{sec:introduction}
