separated different categories of PKE in table 1; added remark in Section 4

--- a/crypto2025/biblio.bib
+++ b/crypto2025/biblio.bib
@@ -1447,3 +1447,77 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
+@article{DBLP:journals/tit/BerlekampMT78,
+  author       = {Elwyn R. Berlekamp and
+                  Robert J. McEliece and
+                  Henk C. A. van Tilborg},
+  title        = {On the inherent intractability of certain coding problems (Corresp.)},
+  journal      = {{IEEE} Trans. Inf. Theory},
+  volume       = {24},
+  number       = {3},
+  pages        = {384--386},
+  year         = {1978},
+  url          = {https://doi.org/10.1109/TIT.1978.1055873},
+  doi          = {10.1109/TIT.1978.1055873},
+  timestamp    = {Tue, 10 Mar 2020 10:44:31 +0100},
+  biburl       = {https://dblp.org/rec/journals/tit/BerlekampMT78.bib},
+  bibsource    = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+@techreport{hamming-quasi-cyclic-4th-round-submission,
+  author = {
+    Carlos Aguilar Melchor and 
+    Nicolas Aragon and 
+    Slim Bettaieb and 
+    Loïc Bidoux and 
+    Olivier Blazy and 
+    Jurjen Bos and 
+    Jean-Christophe Deneuville and 
+    Arnaud Dion and 
+    Philippe Gaborit and 
+    Jérôme Lacan and 
+    Edoardo Persichetti and 
+    Jean-Marc Robert and 
+    Pascal Véron and 
+    Gilles Zémor
+  },
+  institution = {National Institute of Standards and Technology (NIST)},
+  title = {{NIST} Post-Quantum Cryptography Standardization Round 4 Submission: 
+  Hamming Quasi-Cyclic ({HQC})},
+  year = {2024},
+  url = {https://pqc-hqc.org/doc/hqc-specification_2024-10-30.pdf}
+}
+
+@techreport{bike-4th-round-submission,
+  author = {
+    Nicolas Aragon and
+    Paulo L. Barreto and
+    Slim Bettaieb and
+    Loïc Bidoux and
+    Olivier Blazy and
+    Jean-Christophe Deneuville and
+    Philippe Gaborit and
+    Santosh Ghosh and
+    Shay Gueron and
+    Tim Güneysu and
+    Carlos Aguilar Melchor and
+    Rafael Misoczki and
+    Edoardo Persichetti and
+    Jan Richter-Brockmann and
+    Nicolas Sendrier and
+    Jean-Pierre Tillich and
+    Valentin Vasseur and
+    Gilles Zémor
+  },
+  institution = {National Institute of Standards and Technology (NIST)},
+  title = {{NIST} Post-Quantum Cryptography Standardization Round 4 Submission: 
+  {BIKE}: Bit Flipping Key Encapsulation},
+  year = {2024},
+  url = {https://bikesuite.org/files/v5.2/BIKE_Spec.2024.10.10.1.pdf}
+}
+
+
+
